Updatte classes to use builder method