@@ -1,5 +1,7 @@
 package com.znmiller96.pantryapi.service;
 
+import com.znmiller96.pantryapi.model.dao.Category;
+import com.znmiller96.pantryapi.model.dao.Location;
 import com.znmiller96.pantryapi.model.dto.CategoryDto;
 import com.znmiller96.pantryapi.model.dto.LocationDto;
 import com.znmiller96.pantryapi.model.dto.PantryDto;
@@ -12,7 +14,6 @@ import com.znmiller96.pantryapi.util.Utils;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component("PantryService")
 public class PantryPageService {
@@ -36,22 +37,43 @@ public class PantryPageService {
 
     //TODO get Pantry page info
 
+    public void addPantryLocation(int userid, List<String> locations) {
+        locationRepository.saveAll(
+                locations.stream()
+                .map(x -> new Location.Builder().withUserid(userid).withLocation(x).build())
+                .toList());
+    }
+
+    public void addPantryCategory(int userid, List<String> categories) {
+        categoryRepository.saveAll(
+                categories.stream()
+                .map(x -> new Category.Builder()
+                        .withUserid(userid)
+                        .withCategory(x)
+                        .build())
+                .toList());
+    }
+
+    public void addPantryItem(List<PantryDto> pantryDto) {
+
+    }
+
     public List<PantryDto> getPantryItems(int userid) {
         return pantryRepository.findAll()
                 .stream().map(Utils::pantryDaoToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LocationDto> getPantryLocations(int userId) {
         return locationRepository.findAllByUserid(userId)
                 .stream().map(Utils::locationDaoToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<CategoryDto> getPantryCategories(int userId) {
         return categoryRepository.findAllByUserid(userId)
                 .stream().map(Utils::categoryDaoToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ExpirationDate> getExpirationDate(int id) {
